--- a/requirements.txt.txt
+++ b/requirements.txt.txt
@@ -1,6 +1,8 @@
-numpy==1.26.4
-pandas==2.2.2
-streamlit
-scikit-learn
-pip==24.1.1
-keras==3.3.3
+pandas==1.5.3
+numpy==1.23.5
+matplotlib==3.7.2
+seaborn==0.12.2
+plotly==5.10.0
+scikit-learn==1.2.2
+tensorflow==2.12.0
+streamlit==1.23.0
